--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy==1.22.4
 peft==0.7.1
 pypinyin==0.43.0
 tiktoken==0.6.0
-torch==2.2.1
+torch==2.1.2+cu118
 transformers==4.37.2
 xformers==0.0.25
 trl==0.7.4
