--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ numpy==1.23.0
 peft==0.11.1
 pypinyin==0.44.0
 tiktoken==0.5.2
-torch==2.1.2+cu118
+torch==2.1.2
 transformers==4.37.2
 trl==0.7.4
-deepspeed==0.10.3
+deepspeed==0.14.4
 wandb==0.15.10
